# CICL-Humour-Generation-HB

./: .gitignore  README.md  _README.md  humor-archi.drawio  rl_dataset_prep.ipynb  task-a-en-7B.tsv  task_a_generations.csv
src/: .env  ablation_job.sh  ablation_study.py  accelerate_config_72b.yaml  accelerate_config_a100.yaml  accelerate_config_fsdp_32b.yaml  accelerate_config_fsdp_72b.yaml  add_oneliners_to_data.py  compare_base_vs_trained.py  eval_job.sh  evaluate_ablation.py  evaluate_models.py  grpo_job.sh  grpo_job_32b.sh  grpo_job_72b.sh  grpo_job_deepseek_32b.sh  grpo_job_short.sh  grpo_job_single_gpu.sh  grpo_no_accelerate.sh  label_es_data.sh  label_es_data_32b.sh  label_zh_data.sh  label_zh_data_32b.sh  modeling_custom.py  prepare_grpo_data.py  pyproject.toml  requirements.txt  roberta_job.sh  roberta_job_short.sh  run_submissions.py  test_roberta_models.py  train_deepseek_grpo_32b.py  train_grpo.py  train_grpo_multi.py  train_multilingual_roberta_model.py  train_qwen_grpo.py  train_qwen_grpo_32b.py  train_qwen_grpo_72b.py  train_roberta.py  upload_custom_model_code.py
src/ablation_results/: ablation_results.csv
src/comparison_results/: comparison_detailed_20260131_175130.csv  comparison_detailed_20260131_185843.csv  comparison_detailed_20260131_210814.csv  comparison_summary_20260131_175130.csv  comparison_summary_20260131_185843.csv  comparison_summary_20260131_210814.csv
src/eval_results/: eval_detailed_20251211_220204.csv  eval_detailed_20251213_234048.csv  eval_summary_20251211_220204.csv  eval_summary_20251213_234048.csv
src/grpo/: cli.py  (+1 more)
(+62 files in other folders)
